# kaleidoscope

./: .gitignore  LICENSE  README.md
backend/: .env  Cargo.toml  diesel.toml
backend/migrations/2024-06-03-003535_recordings/: down.sql  up.sql
backend/migrations/2024-06-03-003535_videos/: up.sql
backend/migrations/2024-06-03-003539_users/: up.sql
backend/migrations/2024-06-03-024358_recordings/: up.sql
backend/migrations/2024-06-03-024358_videos/: up.sql
backend/migrations/2024-06-03-034610_recordings/: up.sql
backend/migrations/2024-06-06-160953_recordings/: up.sql
backend/migrations/2024-06-08-042001_recordings/: up.sql
backend/src/: callbacks.rs  clip.rs  connection.rs  consts.rs  database.rs  filters.rs  main.rs  schema.rs  tree.rs  websocket_callbacks.rs  websocket_connection.rs
frontend/: .prettierrc  package-lock.json  package.json  tailwind.config.js
frontend/src/: app.css  app.d.ts  app.html  auth.ts  hooks.server.ts
frontend/src/lib/: index.ts
frontend/src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +layout.ts  +page.server.ts  +page.svelte
frontend/src/routes/account/: +page.svelte
frontend/src/routes/account/recordings/: +page.svelte
