[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
diesel = { version = "2.2.0", features = ["postgres", "r2d2"] }
dotenvy = "0.15.7"
futures-util = "0.3.30"
log = "0.4.21"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "full"] }
tokio-stream = "0.1.15"
warp = "0.3.7"
